objects/Sponsor_Criminal_Record__c.object
<CustomObject>
    <fields>
        <fullName>Fingerprint_Result__c</fullName>
        <label>Fingerprint Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Referred to the FFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fingerprints_Taken__c</fullName>
        <label>Fingerprints Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_other_household_members_in_residence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No other household members in residence?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Records_Check__c</fullName>
        <label>Public Records Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Not Clear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sex_Offender__c</fullName>
        <label>Sex Offender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Not Clear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Sponsor__c</referenceTo>
        <relationshipLabel>Sponsor Criminal Records</relationshipLabel>
        <relationshipName>Sponsor_Criminal_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sponsor Criminal Record</label>
    <nameField>
        <label>Sponsor Criminal Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsor Criminal Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>